fix wordpress admin bar on narrow screens

--- a/wp-content/themes/toolbox v2/style.scss
+++ b/wp-content/themes/toolbox v2/style.scss
@@ -1739,3 +1739,9 @@ footer {
 @keyframes back-to-top {
 	50% { line-height: 1.75; }
 }
+
+/* Other */
+
+#wpadminbar {
+	position: fixed !important;
+}
